A bunch of updates.

--- a/assets/blocks/core/code.css
+++ b/assets/blocks/core/code.css
@@ -1,1 +1,1 @@
-.wp-block-code>code{overflow-wrap:normal;overflow-x:scroll;tab-size:4;white-space:pre !important}.wp-block-code.is-style-wrap>code{white-space:pre-wrap !important}
+.wp-block-code{background:var(--wp--preset--color--primary) !important}.wp-block-code>code{overflow-wrap:normal;overflow-x:scroll;tab-size:4;white-space:pre !important}.wp-block-code .prism-titlename{background-color:var(--wp--preset--color--primary-light);color:var(--wp--preset--color--neutral-100);font-weight:500;padding:8px 16px}.wp-block-code.is-style-wrap>code{white-space:pre-wrap !important}
