--- a/assets/blocks/core/query-title.css
+++ b/assets/blocks/core/query-title.css
@@ -1,1 +1,1 @@
-.wp-block-query-title .query-title-prefix{color:var(--wp--preset--color--primary-light);display:block;margin-bottom:1rem;font-size:var(--wp--preset--font-size--medium);font-weight:500;text-transform:uppercase}
+.wp-block-query-title .query-title-prefix{color:var(--wp--preset--color--primary-light);display:block;margin-bottom:1rem;font-size:var(--wp--preset--font-size--small);text-transform:uppercase}
