--- a/assets/blocks/core/navigation.css
+++ b/assets/blocks/core/navigation.css
@@ -1,1 +1,1 @@
-.wp-block-navigation .wp-block-navigation__submenu-icon svg{margin-top:0}
+.wp-block-navigation .wp-block-navigation__submenu-icon svg{margin-top:0}.wp-block-navigation .wp-block-navigation__responsive-container.is-menu-open{padding:var(--wp--preset--spacing--medium);padding-bottom:calc(2*var(--wp--preset--spacing--medium))}
