--- a/src/blocks/core/columns.scss
+++ b/src/blocks/core/columns.scss
@@ -1,9 +1,50 @@
 /* Columns
  ----------------------------------------------------------------------------- */
 
-.wp-block-columns {
-    // Columns blocks with border radius does not always work correctly, so fix let's that.
-    &[style*="border-radius"] {
-        overflow: hidden;
+// .wp-block-columns {
+
+// }
+
+.wp-block-column,
+.wp-block-group {
+    // Allow the first and last children of a Column
+    // block to inherit any border radius if no padding is
+    // set. Children can override radius manually.
+    &[style*="border-radius"]:not([style*="padding"]) {
+        &> :first-child {
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
+
+            * {
+                border-top-left-radius: inherit;
+                border-top-right-radius: inherit;
+            }
+        }
+
+        // Target the last element as long as 
+        // it's not the block appender div.
+        &> :last-child:not(.block-list-appender) {
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
+
+            * {
+                border-bottom-left-radius: inherit;
+                border-bottom-right-radius: inherit;
+            }
+        }
+
+        // When the container block is selected, the 
+        // block appender div is added.
+        &.is-selected {
+            &> :nth-last-child(2) {
+                border-bottom-left-radius: inherit;
+                border-bottom-right-radius: inherit;
+    
+                * {
+                    border-bottom-left-radius: inherit;
+                    border-bottom-right-radius: inherit;
+                }
+            }
+        }
     }
 }
