--- a/templates/search.html
+++ b/templates/search.html
@@ -4,16 +4,16 @@
 <div class="wp-block-group"><!-- wp:group {"align":"wide","style":{"spacing":{"margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|xx-large"}}}} -->
 <div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--xx-large)"><!-- wp:query-title {"type":"search"} /-->
 
-<!-- wp:search {"label":"Search","showLabel":false,"buttonText":"New Search"} /--></div>
+<!-- wp:search {"label":"Search","showLabel":false,"width":50,"widthUnit":"%","buttonText":"New Search"} /--></div>
 <!-- /wp:group -->
 
-<!-- wp:query {"queryId":7,"query":{"perPage":"4","pages":"0","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"displayLayout":{"type":"flex","columns":2},"align":"wide","className":"is-style-2x-gap"} -->
-<div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:post-template -->
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}}},"backgroundColor":"white","className":"is-style-hover-box"} -->
-<div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
+<!-- wp:query {"queryId":7,"query":{"perPage":10,"pages":"0","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"align":"wide","className":"is-style-2x-gap"} -->
+<div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:post-template {"style":{"spacing":{"blockGap":"var:preset|spacing|x-large"}},"layout":{"type":"grid","columnCount":2}} -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}},"dimensions":{"minHeight":"100%"}},"backgroundColor":"white","className":"is-style-hover-box"} -->
+<div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="min-height:100%;padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
 <div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal","letterSpacing":"1px"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
 
-<!-- wp:post-title {"isLink":true,"style":{"typography":{"fontSize":"1.75rem"}}} /-->
+<!-- wp:post-title {"isLink":true,"fontSize":"x-large"} /-->
 
 <!-- wp:post-excerpt {"moreText":"","showMoreOnNewLine":false,"style":{"typography":{"fontSize":"1.125rem"}}} /--></div>
 <!-- /wp:group -->
