--- a/templates/single.html
+++ b/templates/single.html
@@ -76,26 +76,26 @@
 <!-- /wp:comments --></div>
 <!-- /wp:group -->
 
-<!-- wp:group {"layout":{"type":"constrained"},"align":"wide","style":{"spacing":{"margin":{"top":"var:preset|spacing|xxx-large","bottom":"var:preset|spacing|xxx-large"}}}} -->
-<div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--xxx-large);margin-bottom:var(--wp--preset--spacing--xxx-large)"><!-- wp:query {"queryId":7,"query":{"perPage":"3","pages":"1","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false,"taxQuery":null},"displayLayout":{"type":"flex","columns":3},"align":"wide","className":"is-style-2x-gap","layout":{"type":"default"}} -->
-<div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"},"align":"wide","style":{"spacing":{"margin":{"bottom":"var:preset|spacing|large"}}}} -->
+<!-- wp:group {"align":"wide","style":{"spacing":{"margin":{"top":"var:preset|spacing|xxx-large","bottom":"var:preset|spacing|xxx-large"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group alignwide" style="margin-top:var(--wp--preset--spacing--xxx-large);margin-bottom:var(--wp--preset--spacing--xxx-large)"><!-- wp:query {"queryId":7,"query":{"perPage":"3","pages":"1","offset":"0","postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false,"taxQuery":null},"align":"wide","className":"is-style-2x-gap","layout":{"type":"default"}} -->
+<div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:group {"align":"wide","style":{"spacing":{"margin":{"bottom":"var:preset|spacing|large"}}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
 <div class="wp-block-group alignwide" style="margin-bottom:var(--wp--preset--spacing--large)"><!-- wp:heading {"align":"wide"} -->
-<h2 class="alignwide">Latest Articles</h2>
+<h2 class="wp-block-heading alignwide" id="h-latest-articles">Latest Articles</h2>
 <!-- /wp:heading -->
 
-<!-- wp:outermost/icon-block {"iconName":"wordpress-heading","iconColor":"secondary","iconColorValue":"#0B8082"} -->
-<div class="wp-block-outermost-icon-block items-justified-undefined"><div class="icon-container has-icon-color" style="color:#0B8082;width:48px"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"><path d="M6.2 5.2v13.4l5.8-4.8 5.8 4.8V5.2z"></path></svg></div></div>
+<!-- wp:outermost/icon-block {"iconName":"wordpress-heading","iconColor":"secondary","iconColorValue":"#0B8082","className":"items-justified-undefined"} -->
+<div class="wp-block-outermost-icon-block items-justified-undefined"><div class="icon-container has-icon-color has-secondary-color" style="color:#0B8082;width:48px"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"><path d="M6 5V18.5911L12 13.8473L18 18.5911V5H6Z"></path></svg></div></div>
 <!-- /wp:outermost/icon-block --></div>
 <!-- /wp:group -->
 
-<!-- wp:post-template -->
-<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}}},"backgroundColor":"white","className":"is-style-hover-box"} -->
-<div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
+<!-- wp:post-template {"style":{"spacing":{"blockGap":"var:preset|spacing|x-large"}},"layout":{"type":"grid","columnCount":3}} -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}},"dimensions":{"minHeight":"100%"}},"backgroundColor":"white","className":"is-style-hover-box"} -->
+<div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="min-height:100%;padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
 <div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal","letterSpacing":"0.5px"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
 
-<!-- wp:post-title {"isLink":true,"style":{"typography":{"fontSize":"1.75rem"}}} /-->
+<!-- wp:post-title {"isLink":true,"fontSize":"x-large"} /-->
 
-<!-- wp:post-excerpt {"moreText":"","showMoreOnNewLine":false,"style":{"typography":{"fontSize":"1.125rem"}}} /--></div>
+<!-- wp:post-excerpt {"moreText":"","showMoreOnNewLine":false,"fontSize":"small"} /--></div>
 <!-- /wp:group -->
 
 <!-- wp:read-more {"content":"Continue Reading →","style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"small"} /--></div>
