Improve embed and hover box styles.

--- a/src/blocks/core/group.scss
+++ b/src/blocks/core/group.scss
@@ -23,6 +23,7 @@
      --------------------------------------------- */
 
     &.is-style-hover-box {
+        border-radius: var(--wp--custom--border-radius--default);
         box-shadow: var(--wp--custom--box-shadow--minimal);
 
         // Only show animation on desktop.
