--- a/templates/page-has-title.html
+++ b/templates/page-has-title.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"nautilus","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
 <!-- wp:group {"layout":{"contentSize":"720px","wideSize":"960px","type":"constrained"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-large","margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|x-large"}}}} -->
 <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--x-large)">
@@ -14,4 +14,4 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","theme":"nautilus","tagName":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
