--- a/templates/single.html
+++ b/templates/single.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"nautilus","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
 <!-- wp:group {"layout":{"contentSize":"720px","wideSize":"960px","type":"constrained"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-large","margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|x-large"}}}} -->
 <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
@@ -48,7 +48,7 @@
 
 <!-- wp:comment-template -->
 <!-- wp:columns {"style":{"spacing":{"blockGap":"var:preset|spacing|small","margin":{"top":"var:preset|spacing|large","bottom":"var:preset|spacing|large"}}}} -->
-<div class="wp-block-columns" style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"><!-- wp:column {"width":"40px","style":{"spacing":{}}} -->
+<div class="wp-block-columns" style="margin-top:var(--wp--preset--spacing--large);margin-bottom:var(--wp--preset--spacing--large)"><!-- wp:column {"width":"40px","style":{"spacing":[]}} -->
 <div class="wp-block-column" style="flex-basis:40px"><!-- wp:avatar {"size":40,"style":{"border":{"radius":"20px"}}} /--></div>
 <!-- /wp:column -->
 
@@ -112,4 +112,4 @@
 <!-- /wp:query --></div>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","theme":"nautilus","tagName":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
