--- a/templates/page.html
+++ b/templates/page.html
@@ -1,9 +1,9 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"}}}} -->
-<main class="wp-block-group" style="margin-top:0;margin-bottom:0">
-    <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-</main>
+<main class="wp-block-group" style="margin-top:0;margin-bottom:0"><!-- wp:post-featured-image /-->
+
+<!-- wp:post-content {"layout":{"type":"constrained"}} /--></main>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
