Initial changes for v2.

--- a/assets/blocks/core/latest-comments.css
+++ b/assets/blocks/core/latest-comments.css
@@ -1,1 +1,1 @@
-.wp-block-latest-comments .wp-block-latest-comments__comment-date{color:var(--wp--preset--color--primary-light);font-weight:500;font-family:var(--wp--preset--font-family--primary);font-size:var(--wp--preset--font-size--x-small);letter-spacing:1px;margin-top:.5rem;text-transform:uppercase}
+.wp-block-latest-comments .wp-block-latest-comments__comment-date{color:var(--wp--preset--color--primary-light);font-weight:500;font-family:var(--wp--preset--font-family--primary);font-size:var(--wp--preset--font-size--x-small);margin-top:.5rem;text-transform:uppercase}
