--- a/assets/blocks/core/search.css
+++ b/assets/blocks/core/search.css
@@ -1,1 +1,1 @@
-.wp-block-search .wp-block-search__input{padding:.5rem 1rem}
+.wp-block-search .wp-block-search__input{padding-left:1rem;padding-right:1rem}
