--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <div class="wp-block-query alignwide is-style-2x-gap"><!-- wp:post-template {"style":{"spacing":{"blockGap":"var:preset|spacing|x-large"}},"layout":{"type":"grid","columnCount":2},"fontSize":"medium"} -->
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}},"dimensions":{"minHeight":"100%"}},"backgroundColor":"white","className":"is-style-hover-box"} -->
 <div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="min-height:100%;padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
-<div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal","letterSpacing":"0.5px"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
+<div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
 
 <!-- wp:post-title {"isLink":true,"fontSize":"x-large"} /-->
 
