--- a/templates/single.html
+++ b/templates/single.html
@@ -3,13 +3,13 @@
 <!-- wp:group {"layout":{"contentSize":"720px","wideSize":"960px","type":"constrained"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-large","margin":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|x-large"}}}} -->
 <div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--xx-large);margin-bottom:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
 <div class="wp-block-group"><!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"},"style":{"spacing":{"blockGap":"var:preset|spacing|small"},"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"x-small"} -->
-<div class="wp-block-group has-x-small-font-size" style="font-style:normal;font-weight:500"><!-- wp:post-terms {"term":"category","style":{"typography":{"fontWeight":"500","letterSpacing":"0.5px","textTransform":"uppercase","lineHeight":"1"}}} /-->
+<div class="wp-block-group has-x-small-font-size" style="font-style:normal;font-weight:500"><!-- wp:post-terms {"term":"category","style":{"typography":{"fontWeight":"500","textTransform":"uppercase","lineHeight":"1"}}} /-->
 
 <!-- wp:paragraph {"textColor":"neutral-300","fontSize":"tiny"} -->
 <p class="has-neutral-300-color has-text-color has-tiny-font-size">|</p>
 <!-- /wp:paragraph -->
 
-<!-- wp:post-date {"format":"F j, Y","displayType":"modified","style":{"typography":{"letterSpacing":"0.5px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink"} /--></div>
+<!-- wp:post-date {"format":"F j, Y","displayType":"modified","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink"} /--></div>
 <!-- /wp:group -->
 
 <!-- wp:post-title {"level":1} /--></div>
@@ -27,8 +27,8 @@
 <div class="wp-block-group"><!-- wp:post-terms {"term":"category","separator":"","className":"is-style-outline","fontSize":"x-small"} /-->
 
 <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"},"style":{"spacing":{"blockGap":"var:preset|spacing|x-small"}}} -->
-<div class="wp-block-group"><!-- wp:paragraph {"style":{"typography":{"fontStyle":"normal","fontWeight":"500","letterSpacing":"0.5px","textTransform":"uppercase"},"spacing":{"margin":{"top":"2px"}}},"textColor":"primary-light","fontSize":"x-small","fontFamily":"primary"} -->
-<p class="has-primary-light-color has-text-color has-primary-font-family has-x-small-font-size" style="margin-top:2px;font-style:normal;font-weight:500;letter-spacing:0.5px;text-transform:uppercase">Share:</p>
+<div class="wp-block-group"><!-- wp:paragraph {"style":{"typography":{"fontStyle":"normal","fontWeight":"500","textTransform":"uppercase"},"spacing":{"margin":{"top":"2px"}}},"textColor":"primary-light","fontSize":"x-small","fontFamily":"primary"} -->
+<p class="has-primary-light-color has-text-color has-primary-font-family has-x-small-font-size" style="margin-top:2px;font-style:normal;font-weight:500;text-transform:uppercase">Share:</p>
 <!-- /wp:paragraph -->
 
 <!-- wp:outermost/social-sharing {"iconColor":"primary","iconColorValue":"#0F172A","size":"has-small-icon-size","className":"is-style-logos-only","style":{"spacing":{"blockGap":"var:preset|spacing|x-small"}}} -->
@@ -56,7 +56,7 @@
 <div class="wp-block-column" style="border-bottom-color:var(--wp--preset--color--neutral-300);border-bottom-width:1px;padding-bottom:var(--wp--preset--spacing--medium)"><!-- wp:comment-author-name {"isLink":false,"style":{"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"medium","fontFamily":"primary"} /-->
 
 <!-- wp:group {"layout":{"type":"flex"},"style":{"spacing":{"blockGap":"var:preset|spacing|small","margin":{"top":"0","bottom":"0"}},"typography":{"fontStyle":"normal","fontWeight":"500"}},"fontSize":"x-small"} -->
-<div class="wp-block-group has-x-small-font-size" style="margin-top:0;margin-bottom:0;font-style:normal;font-weight:500"><!-- wp:comment-date {"isLink":false,"style":{"typography":{"textTransform":"uppercase","letterSpacing":"0.5px"}},"textColor":"primary-light","fontFamily":"primary"} /-->
+<div class="wp-block-group has-x-small-font-size" style="margin-top:0;margin-bottom:0;font-style:normal;font-weight:500"><!-- wp:comment-date {"isLink":false,"style":{"typography":{"textTransform":"uppercase"}},"textColor":"primary-light","fontFamily":"primary"} /-->
 
 <!-- wp:comment-edit-link {"fontFamily":"primary"} /--></div>
 <!-- /wp:group -->
@@ -91,7 +91,7 @@
 <!-- wp:post-template {"style":{"spacing":{"blockGap":"var:preset|spacing|x-large"}},"layout":{"type":"grid","columnCount":3}} -->
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|large","right":"var:preset|spacing|x-large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|x-large"}},"dimensions":{"minHeight":"100%"}},"backgroundColor":"white","className":"is-style-hover-box"} -->
 <div class="wp-block-group is-style-hover-box has-white-background-color has-background" style="min-height:100%;padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--x-large)"><!-- wp:group -->
-<div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal","letterSpacing":"0.5px"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
+<div class="wp-block-group"><!-- wp:post-date {"format":"F j, Y","style":{"typography":{"textTransform":"uppercase","fontWeight":"500","lineHeight":"1","fontStyle":"normal"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"x-small"} /-->
 
 <!-- wp:post-title {"isLink":true,"fontSize":"x-large"} /-->
 
