--- a/editor.css
+++ b/editor.css
@@ -1,6 +1,6 @@
 /* Editor Styles
  ----------------------------------------------------------------------------- */
-.editor-styles-wrapper .edit-post-visual-editor__post-title-wrapper {
+/* .editor-styles-wrapper .edit-post-visual-editor__post-title-wrapper {
   align-items: center;
   display: flex;
   background-color: #fff;
@@ -22,4 +22,4 @@
 }
 .block-editor-block-list__layout.is-root-container:not(.edit-site-block-editor__block-list):not(.is-outline-mode) > *:last-child:not(.alignfull) {
   margin-bottom: calc(4 * var(--wp--style--block-gap));
-}
+} */
