--- a/src/blocks/core/categories.scss
+++ b/src/blocks/core/categories.scss
@@ -46,4 +46,41 @@
             display: none;
         }
     }
+
+    /* Block Style: Outline
+     -------------------------------------------- */
+     &.is-style-outline {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: var(--wp--preset--spacing--x-small);
+
+        li {
+            border: var(--wp--custom--border--default);
+            border-radius: var(--wp--custom--border-radius--default);
+            cursor: pointer;
+            display: inline-block;
+            font-size: var(--wp--preset--font-size--x-small) !important;
+            font-weight: 400;
+            line-height: var(--wp--custom--typography--line-height--x-small);
+            padding-right: 1.2em;
+
+            a {
+                color: var(--wp--preset--color--primary);
+                display: inline-block;
+                padding: .8em 0 .8em 1.2em;
+                text-decoration: none;
+                text-transform: none;
+            }
+
+            &:hover {
+                background-color: var(--wp--preset--color--neutral-100);
+                border-color: var(--wp--preset--color--neutral-300);
+            }
+
+            .tag-link-count {
+                color: currentColor;
+            }
+        }
+    }
 }
