--- a/src/blocks/core/tag-cloud.scss
+++ b/src/blocks/core/tag-cloud.scss
@@ -2,45 +2,45 @@
  ----------------------------------------------------------------------------- */
 
 .wp-block-tag-cloud {
-    a {
-        font-size: var(--wp--preset--font-size--x-small) !important;
-        text-decoration: none;
-
-        &:hover {
-            text-decoration: underline;
-        }
-
-        .tag-link-count {
-            color: var(--wp--preset--color--neutral-500);
-        }
-    }
 
     /* Block Style: Outline
      -------------------------------------------- */
-
     &.is-style-outline {
+        display: flex;
+        flex-wrap: wrap;
+        gap: var(--wp--preset--spacing--x-small);
+
         a {
             border: var(--wp--custom--border--default);
             border-radius: var(--wp--custom--border-radius--default);
-            color: var(--wp--preset--color--primary-light);
+            color: var(--wp--preset--color--primary);
             display: inline-block;
             font-size: var(--wp--preset--font-size--x-small) !important;
             font-weight: 400;
-            letter-spacing: 0;
             line-height: var(--wp--custom--typography--line-height--x-small);
-            padding: 0.6em 1.2em;
+            padding: .8em 1.2em;
             text-decoration: none;
             text-transform: none;
 
             &:hover {
-                background-color: var(--wp--preset--color--primary);
-                border-color: var(--wp--preset--color--primary);
-                color: var(--wp--preset--color--neutral);
+                background-color: var(--wp--preset--color--neutral-100);
+                border-color: var(--wp--preset--color--neutral-300);
             }
 
             .tag-link-count {
                 color: currentColor;
             }
         }
+    }
+}
+
+/* Block Style: Outline (Editor styles)
+ -------------------------------------------- */
+.is-style-outline {
+
+    .wp-block-tag-cloud {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1ch;
     }
 }
